_sass/layout/default.scss
@import '../variables/breakpoints.scss';
@import '../variables/colors.scss';

.container {
  display: flex;
  flex-direction: column;
  grid-template-rows: minmax(0, 1fr);
  height: 100%;
  min-height: calc(100vh - 123px);
  width: 100%;

  @media screen and (min-width: $tablet) {
    display: grid;
    gap: 1rem;
    grid-template-columns: 250px minmax(0, 1100px);
    grid-template-areas:
      'sidebar content'
      'sidebar footer';
  }

  @media screen and (min-width: $lg-screen) {
    grid-template-columns: 250px minmax(0, 1fr);
  }
}

.content {
  grid-area: content;
}

.default {
  @media screen and (min-width: $lg-screen) {
    display: grid;
    gap: 1rem;
    grid-template-columns: minmax(0, 1100px) minmax(300px, 1fr);
  }
}

.full {
  max-width: $wide-width;
}

.content a:not(.blog-roll-link, .toc-link),
.post-container a:not(.blog-roll-link, .toc-link),
.search-result a {
  text-decoration: underline 2px solid rgba($gold, 0.5);

  &:hover {
    text-decoration: none;
    background-color: rgba($gold, 0.5);
    transition: 0.3s ease-in;
  }
}

.header {
  background-color: $blueBright;
  border-bottom: solid 7px $gold;
  box-shadow: $boxShadow;
}

.skip {
  position: absolute;
  left: -10000px;
  top: auto;
  width: 1px;
  height: 1px;
  overflow: hidden;
  background-color: $white;
  padding: 1rem;

  &:focus {
    position: absolute;
    left: 1rem;
    top: 1rem;
    width: auto;
    height: auto;
  }
}

.title {
  color: $white;
  display: block;
  font-family: $fontHeader;
  font-size: $fontSizeHuge;
  font-weight: normal;
  margin: 0 auto;
  padding: 2rem 1rem;

  &.changelog-title,
  &.page-title,
  &.page_full-title {
    @media screen and (min-width: $desktop) {
      margin: 0 250px;
    }
  }

  &.post-title {
    &.with-toc {
      @media screen and (min-width: $desktop) {
        max-width: $wide-width;
      }
    }

    &:not(.with-toc) {
      @media screen and (min-width: $desktop) {
        max-width: $normal-width;
      }
    }
  }

  &.presentation-title {
    @media screen and (min-width: $desktop) {
      max-width: $normal-width;
    }
  }
}

